package Entidades;

public class Disciplina {
}
