package Entidades;

public class Entrenamientos {
}
