package Entidades;

public class atleta {
}
